[package]
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "mpsl-presenter-receiver"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32l4]
features = ["stm32l4x6", "rt"]
version = "0.12.1"

[dependencies.stm32l4xx-hal]
features = ["stm32l4x6", "rt"]
version = "0.6.0"

# this lets you use `cargo fix`!
[[bin]]
name = "mpsl-presenter-receiver"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
